--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-
+        "mustangostang/spyc": "^0.6.2"
     },
     "autoload": {
         "files": [ "dictator.php" ]
